# ClassificationTP

./: .gitignore  CMakeLists.txt  ClassificationTP.sln  ClassificationTP.vcxproj  ClassificationTP.vcxproj.filters  Dataset.c  Dataset.h  DecisionTree.c  DecisionTree.h  ForestFileHandler.c  RandomForest.c  Settings.h  Split.c  Split.h  Tests.c  main.c  readme-vpl.md  readme.md  viewer.py
ClassificationTP/: BEST_FOREST_SAVED.dfm  CMakeLists.txt  ClassificationTP.vcxproj  Dataset.c  Dataset.h  DatasetImprovement.c  DatasetImprovement.h  DecisionTree.c  DecisionTree.h  ForestFileHandler.c  ForestFileHandler.h  HyperParameters.c  HyperParameters.h  Interface.c  Interface.h  RandomForest.c  RandomForest.h  SAVED_FOREST.dfm  Settings.h  Sound.c  Sound.h  Split.c  Split.h  Tests.c  Tests.h  Text.c  Text.h  main.c  mainold.c  tt  viewer.py
Forests/: MNIST.dfm  MNIST2.dfm  MNIST20_filtered_tree_965.dfm  MNIST3.dfm  MNIST_LOW.dfm  PENDIGITS.dfm  newForestTest.dfm
include/: Dataset.h  DecisionTree.h  RandomForest.h  Split.h
src/: Dataset.c  DecisionTree.c  RandomForest.c  Split.c  main.c
